--- a/public/master.css
+++ b/public/master.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
 }
-body{ background-color: ivory; padding:10px; }
+body{ background-color: black; padding:10px; }
 html, body {
   height: 100%;
   margin: 0;
