--- a/public/master.css
+++ b/public/master.css
@@ -1,16 +1,29 @@
 * {
   box-sizing: border-box;
 }
-body{ background-color: black; padding:10px; }
+body{ background: url("bg.jpg") no-repeat; padding:10px; }
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 /**
  * Canvas
  */
+
+#hud{
+  background-color: #FF0000;
+  width: 50%;
+  height: 500px;
+  position: absolute;
+  margin-left: 50%;
+  -moz-border-radius:10px;
+  -webkit-border-radius:10px;
+  border-radius:10px;
+  border: 10px groove #666666;
+}
 
 #stage {
   -moz-border-radius:10px;
@@ -18,6 +31,7 @@ html, body {
   border-radius:10px;
   border: 10px groove #666666;
   position: relative;
+  width: 50%;
   left: 0;
   right: 0;
   bottom: 0;
@@ -27,7 +41,7 @@ html, body {
 #Characters
 {
   color: aquamarine;
-  
+
 }
 
 .colors {
