--- a/public/master.css
+++ b/public/master.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
 }
-body{ background: url("bg.jpg") no-repeat; padding:10px; }
+body{ background: url("hud_bg.png") no-repeat center; padding:10px; background-size: cover; }
 html, body {
   height: 100%;
   margin: 0;
