--- a/public/master.css
+++ b/public/master.css
@@ -14,18 +14,41 @@ html, body {
  */
 
 #hud{
-  background: url("hud_bg.png") no-repeat;
-  background-size: cover;
+    user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
   display: inline-block;
   color:#00aaFF;
-  width: 50%;
-  height: 500px;
+  width: 100%;
+  height: 50%;
   position: absolute;
-  margin-left: 50%;
-  -moz-border-radius:10px;
+  /*-moz-border-radius:10px;
   -webkit-border-radius:10px;
   border-radius:10px;
-  border: 10px groove #666666;
+  border: 10px groove #666666;*/
+}
+
+#player1{
+    position: absolute;
+    top: 10px;
+    left: 100px;
+}
+
+#player2{
+    position: absolute;
+    top: 10px;
+    right: 70px;
+}
+
+#lifeBarPlayer1{
+    position: absolute;
+    left: 250px;
+}
+
+#lifeBarPlayer2{
+    position: absolute;
+    right: 250px;
 }
 
 #hud .lifep1{
@@ -36,7 +59,7 @@ html, body {
   display: none;
 }
 
-#id {
+#win {
   position: absolute;
   font-size: 78px;
   top: 50%;
@@ -49,15 +72,17 @@ html, body {
   -webkit-border-radius:10px;
   border-radius:10px;
   border: 10px groove #666666;
-  position: relative;
-  left: 0;
+  position: absolute;
+  left: 30%;
   right: 0;
   bottom: 0;
-  top: 0;
+  top: 10%;
 }
 
 #Characters
 {
+    position: absolute;
+    right: 44%;
   color: aquamarine;
 
 }
