--- a/public/master.css
+++ b/public/master.css
@@ -62,9 +62,11 @@ html, body {
 #win {
   position: absolute;
   font-size: 78px;
-  top: 50%;
-  left: 50%;
-  color: #00AAFF
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: none;
+  color: #00AAFF;
 }
 
 #stage {
